flickering solved

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 #main-img{
     width: 100%;
-    transition: opacity 2s ease-in-out;
+    transition: opacity 3s ease-in-out;
 }
 #main-video{
     width: 100vw;
